--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html> 
 <head> 
 <meta cherset="UTF-8"> 
-<font size="7"> 这是什么鬼名的主页</font><br/>
-<tltle>你干嘛</tltle>
+<font size="5"> 这是什么鬼名的主页</font><br/>
+<tltle>你干嘛</tltle>、
  
 <br>
  
