--- a/index.html
+++ b/index.html
@@ -33,4 +33,11 @@
 <a href="https://im.popoim.com/im/web">泡泡</a>
 <br>
 <br>
-<a href="https://gitblock.cn/">稽木世界</a> 
+<a href="https://gitblock.cn/">稽木世界</a>
+<br>
+<br>
+<br>
+<font size="5">打广告</font><br/>
+<br>
+<br>
+<a href="https://waterpaomian.github.io/">凉白开的主站</a>
