--- a/index.html
+++ b/index.html
@@ -42,3 +42,10 @@
 <br>
 <a href="https://waterpaomian.github.io/">凉白开的主站</a>
 <font size="3">(此为试用，如要打广告要付最低10金币</font><br/>
+<br>
+<br>
+<br>
+<font size="5">康康</font><br/><br>
+<br>
+<br>
+<video src="https://www.bilibili.com/video/BV1uT4y1P7CX/?spm_id_from=333.337.search-card.all.click">
