--- a/index.html
+++ b/index.html
@@ -48,4 +48,4 @@
 <font size="5">康康</font><br/><br>
 <br>
 <br>
-<video src="https://www.bilibili.com/video/BV1uT4y1P7CX/?spm_id_from=333.337.search-card.all.click">
+<iframe src="//player.bilibili.com/player.html?aid=226687271&bvid=BV1Gh411V75Z&cid=1073051620&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
