--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 
 <html> 
 <head> 
-<meta cherset="UTF-8"> 
+<meta cherset="UTF-8">
+```css
+body {
+background-color: black;
+}
+      
+ 
 <font size="6">这是什么鬼名的主页</font><br/>
 <tltle>你干嘛</tltle>
 <br>
